--- a/public/css/prep.webflow.css
+++ b/public/css/prep.webflow.css
@@ -10,14 +10,14 @@ body {
 	padding-top: 40px;
 	padding-bottom: 40px;
 	border-top: 1px solid #000;
-	background-image: url('../img/blueback-v4.3.jpg');
+	background-image: url('/prep/img/blueback.jpg');
 	background-position: 0px 0px;
 	background-size: 1500px;
 }
 
 .div-block {
 	padding-top: 0px;
-	background-image: url('../img/untitled.jpg');
+	background-image: url('/prep/img/untitled.jpg');
 	background-position: 0px 0px;
 	background-size: 1540px;
 }
@@ -89,13 +89,6 @@ body {
 
 .nav-menu {
 	margin-top: 2px;
-}
-
-.container-2 {
-	padding-top: 692px;
-	background-image: url('../img/laptop-tilt-left-v2.jpg');
-	background-position: 0px 0px;
-	background-size: 2560px;
 }
 
 .image-2 {
@@ -349,7 +342,7 @@ body {
 .lemma-difference {
 	padding-top: 40px;
 	padding-bottom: 40px;
-	background-image: url('../img/blueback-v4.3.jpg');
+	background-image: url('/prep/img/blueback.jpg');
 	background-position: 0px 0px;
 	background-size: cover;
 	font-style: normal;
@@ -678,15 +671,6 @@ body {
 	list-style-type: square;
 }
 
-.section-12 {
-	padding-top: 60px;
-	padding-bottom: 60px;
-	border-top: 1px solid hsla(0, 2%, 61%, .77);
-	background-color: #1c1d1f;
-	box-shadow: 0 0 20px 0 rgba(0, 0, 0, .49);
-	color: #fff;
-}
-
 .form {
 	padding-right: 60px;
 	padding-left: 60px;
@@ -722,19 +706,6 @@ body {
 
 .image-14 {
 	padding-bottom: 10px;
-}
-
-.heading-24 {
-	margin-top: 20px;
-}
-
-.teamphoto {
-	border-radius: 50%;
-	box-shadow: 0 0 10px 2px rgba(0, 0, 0, .5);
-}
-
-.teamphoto:hover {
-	box-shadow: 0 0 10px 3px rgba(0, 0, 0, .5);
 }
 
 .nav-link {
