--- a/public/css/prep.webflow.css
+++ b/public/css/prep.webflow.css
@@ -223,7 +223,7 @@ body {
 	clear: left;
 	border: 2px solid #fff;
 	border-radius: 10px;
-	background-color: #4c7eb2;
+	background-color: #035b9b;
 	font-size: 20px;
 }
 
@@ -805,7 +805,7 @@ body {
 }
 
 .image-17 {
-	margin-top: 6px;
+	margin-top: 8px;
 }
 
 @media (max-width: 991px) {
