--- a/public/css/prep.webflow.css
+++ b/public/css/prep.webflow.css
@@ -731,7 +731,7 @@ body {
 }
 
 .nav-link.login:hover {
-	border-color: #fa4e09;
+	border-color: #fff;
 	border-radius: 6px;
 	background-color: #fa4e09;
 	color: #fff;
