--- a/public/css/prep.webflow.css
+++ b/public/css/prep.webflow.css
@@ -808,6 +808,12 @@ body {
 	margin-top: 6px;
 }
 
+.tabgif {
+	margin-top: 1px;
+	margin-bottom: 20px;
+	box-shadow: 2px 3px 20px 0 rgba(0,0,0,.5);
+}
+
 @media (max-width: 991px) {
 	.heading-7 {
 		padding-top: 2px;
