--- a/public/css/prep.webflow.css
+++ b/public/css/prep.webflow.css
@@ -537,7 +537,7 @@ body {
 .heading-23 {
 	margin-top: 0px;
 	margin-bottom: 60px;
-	color: #fff;
+	color: #000;
 	font-size: 32px;
 	line-height: 36px;
 	font-weight: 400;
@@ -602,6 +602,12 @@ body {
 	right: 0px;
 	display: none;
 	margin-left: -20px;
+
+	width: 40px;
+	height: 15px;
+	border-left: 20px solid transparent;
+	border-right: 20px solid transparent;
+	border-top: 15px solid rgb(3, 91, 155);
 }
 
 .tabbutton {
@@ -797,10 +803,15 @@ body {
 }
 
 .tabgif {
-	margin-top: 1px;
-	margin-bottom: 20px;
-	box-shadow: 2px 3px 20px 0 rgba(0,0,0,.5);
+	box-shadow: 0 0 10px 0 rgba(50,50,50,.3);
+	border-radius: 10px;
+	overflow: hidden;
+	display: inline-block;
 }
+.tabgif img, .tabgif video {
+	display: block;
+}
+
 
 @media (max-width: 991px) {
 	.heading-7 {
@@ -980,7 +991,6 @@ body {
 	.heading-23 {
 		margin-bottom: 20px;
 		padding-top: 0px;
-		color: #000;
 	}
 	.tabbutton {
 		width: auto;
