--- a/public/css/prep.webflow.css
+++ b/public/css/prep.webflow.css
@@ -1,5 +1,6 @@
 body {
-	font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
+	font-family: Roboto, Arial, 'Helvetica Neue', Helvetica, sans-serif;
+	font-weight: 400;
 	color: #333;
 	font-size: 14px;
 	line-height: 20px;
@@ -365,11 +366,6 @@ body {
 	margin: 0px;
 }
 
-.body {
-	font-family: Roboto, sans-serif;
-	font-weight: 400;
-}
-
 .partner-image {
 	margin-right: 20px;
 	margin-bottom: 25px;
@@ -430,7 +426,7 @@ body {
 	margin-bottom: 10px;
 	padding-top: 10px;
 	padding-bottom: 10px;
-	font-size: 60px;
+	font-size: 58px;
 	line-height: 54px;
 	font-weight: 300;
 	letter-spacing: 0px;
@@ -443,8 +439,8 @@ body {
 	padding-top: 10px;
 	padding-right: 0px;
 	padding-bottom: 10px;
-	font-size: 60px;
-	line-height: 60px;
+	font-size: 58px;
+	line-height: 58px;
 	font-weight: 300;
 	letter-spacing: 6px;
 	text-decoration: none;
