--- a/public/css/prep.webflow.css
+++ b/public/css/prep.webflow.css
@@ -822,7 +822,13 @@ body {
 .tabgif img, .tabgif video {
 	display: block;
 }
-
+.textblock-12 {
+	font-size: 32px;
+	line-height: 40px;
+	font-weight: 300;
+	letter-spacing: 0px;
+	padding-bottom: 40px;
+}
 
 @media (max-width: 991px) {
 	.heading-7 {
