--- a/public/css/prep.webflow.css
+++ b/public/css/prep.webflow.css
@@ -16,50 +16,6 @@ body {
 	background-size: 1500px;
 }
 
-.heading {
-	margin-top: 10px;
-	margin-bottom: 10px;
-	float: right;
-}
-
-.heading-2 {
-	margin-top: 0px;
-	float: right;
-	clear: right;
-}
-
-.div-block-2 {
-	position: relative;
-	margin-top: 1px;
-	margin-right: 14px;
-	padding-top: 20px;
-	padding-right: 120px;
-}
-
-.image {
-	margin-top: -263px;
-}
-
-.button {
-	position: relative;
-	right: 0px;
-	margin-top: 44px;
-	margin-right: 126px;
-	margin-left: 0px;
-	padding-right: 25px;
-	padding-left: 25px;
-	float: right;
-	clear: left;
-	font-family: Verdana, Geneva, sans-serif;
-	font-size: 20px;
-}
-
-.heading-3 {
-	margin-top: 40px;
-	margin-bottom: 40px;
-	text-align: center;
-}
-
 .container {
 	border: 1px none #d4d4d4;
 }
@@ -67,13 +23,6 @@ body {
 .navbar {
 	border: 1px solid #d4d4d4;
 	background-color: #fff;
-}
-
-.heading-4 {
-	margin-bottom: 20px;
-	padding-top: 24px;
-	padding-bottom: 24px;
-	padding-left: 30px;
 }
 
 .section-2 {
@@ -97,17 +46,6 @@ body {
 	padding-bottom: 119px;
 }
 
-.heading-5 {
-	display: block;
-	margin: 0px auto;
-	padding-top: 0px;
-	padding-left: 0px;
-	float: none;
-	color: #fff;
-	font-weight: 400;
-	text-align: center;
-}
-
 .dif_block {
 	margin-top: 40px;
 	margin-bottom: 40px;
@@ -125,10 +63,6 @@ body {
 	text-align: center;
 }
 
-.image-3 {
-	text-align: center;
-}
-
 .description {
 	display: block;
 	color: #fff;
@@ -140,14 +74,6 @@ body {
 	margin-bottom: 0px;
 	padding-top: 0px;
 	padding-bottom: 0px;
-}
-
-.heading-6 {
-	display: block;
-	margin: 0px auto;
-	font-size: 30px;
-	font-weight: 400;
-	text-align: center;
 }
 
 .tagline {
@@ -173,36 +99,6 @@ body {
 	box-shadow: 11px 11px 20px 0 rgba(0, 0, 0, .5);
 }
 
-.heading-7 {
-	display: block;
-	margin-top: 30px;
-	margin-bottom: 30px;
-	font-family: Verdana, Geneva, sans-serif;
-	font-size: 61px;
-	font-weight: 100;
-	text-align: center;
-}
-
-.heading-8 {
-	margin-top: 0px;
-	margin-bottom: 20px;
-	font-family: Verdana, Geneva, sans-serif;
-	font-size: 60px;
-	font-weight: 100;
-	text-align: center;
-}
-
-.button-2 {
-	display: block;
-	text-align: center;
-}
-
-.button-3 {
-	display: block;
-	float: none;
-	clear: none;
-	text-align: center;
-}
 
 .button-4 {
 	display: inline-block;
@@ -265,15 +161,6 @@ body {
 	border-bottom: 1px solid #555252;
 }
 
-.heading-9 {
-	margin-top: 60px;
-	margin-bottom: 60px;
-	padding-top: 0px;
-	padding-bottom: 0px;
-	font-weight: 400;
-	text-align: center;
-}
-
 .heading-10 {
 	margin-top: 0px;
 	margin-bottom: 60px;
@@ -281,10 +168,6 @@ body {
 	padding-bottom: 0px;
 	font-weight: 400;
 	text-align: center;
-}
-
-.row-2 {
-	margin-bottom: 30px;
 }
 
 .column {
@@ -362,13 +245,6 @@ body {
 	padding-bottom: 40px;
 }
 
-.heading-11 {
-	margin-top: 0px;
-	margin-bottom: 20px;
-	color: #fff;
-	font-weight: 400;
-}
-
 .text-block-3 {
 	padding-top: 20px;
 	color: #fff;
@@ -383,50 +259,6 @@ body {
 	margin-right: 20px;
 	margin-bottom: 25px;
 	margin-left: 20px;
-}
-
-.heading-12 {
-	margin-top: 0px;
-	margin-bottom: 0px;
-	padding-top: 20px;
-	padding-bottom: 20px;
-	font-weight: 400;
-}
-
-.heading-13 {
-	font-weight: 400;
-}
-
-.column-2 {
-	padding-right: 0px;
-	padding-left: 0px;
-}
-
-.row-4 {
-	margin-left: -8px;
-	padding-right: 0px;
-	padding-left: 0px;
-}
-
-.heading-14 {
-	margin-top: 0px;
-	margin-bottom: 0px;
-	font-weight: 400;
-}
-
-.section-head {
-	color: #fff;
-	font-size: 40px;
-	font-style: normal;
-	font-weight: 300;
-}
-
-.heading-15 {
-	font-weight: 100;
-}
-
-.heading-16 {
-	font-weight: 400;
 }
 
 .heading-17 {
@@ -461,12 +293,6 @@ body {
 	text-transform: uppercase;
 }
 
-.heading-20 {
-	color: #fff;
-	font-weight: 400;
-	text-align: center;
-}
-
 .section-6 {
 	margin-top: 0px;
 	padding-top: 0px;
@@ -486,12 +312,6 @@ body {
 	font-weight: 400;
 }
 
-.section-7 {
-	margin-top: 0px;
-	padding-top: 60px;
-	padding-bottom: 60px;
-}
-
 .section-8 {
 	padding-top: 60px;
 	padding-bottom: 60px;
@@ -505,11 +325,6 @@ body {
 	background-image: linear-gradient(180deg, #035b9b, #035b9b);
 }
 
-.section-10 {
-	padding-top: 60px;
-	padding-bottom: 60px;
-}
-
 .tabs {
 	margin-top: 60px;
 }
@@ -519,10 +334,6 @@ body {
 	padding: 0px 10%;
 }
 
-.tabs-section {
-	margin-top: 0px;
-	margin-bottom: 0px;
-}
 
 .tabs-button {
 	width: 30%;
@@ -552,12 +363,6 @@ body {
 	line-height: 36px;
 	font-weight: 400;
 }
-
-.image-9 {
-	float: none;
-	clear: none;
-}
-
 .text-block-4 {
 	margin-bottom: 60px;
 }
@@ -568,43 +373,6 @@ body {
 	font-size: 16px;
 }
 
-.text-block-5 {
-	color: #035b9b;
-	font-size: 16px;
-}
-
-.text-block-6 {
-	color: #fff;
-	font-size: 16px;
-}
-
-.text-block-7 {
-	color: #035b9b;
-	font-size: 16px;
-}
-
-.image-10 {
-	position: absolute;
-	left: 0px;
-	top: 10%;
-	right: 0px;
-}
-
-.image-11 {
-	position: absolute;
-	left: 0px;
-	top: 100%;
-	right: 0px;
-}
-
-.image-12 {
-	position: absolute;
-	left: 50%;
-	top: 100%;
-	right: 0px;
-	margin-left: -20px;
-}
-
 .tab-indicator {
 	position: absolute;
 	left: 50%;
@@ -612,7 +380,6 @@ body {
 	right: 0px;
 	display: none;
 	margin-left: -20px;
-
 	width: 40px;
 	height: 15px;
 	border-left: 20px solid transparent;
@@ -646,14 +413,6 @@ body {
 	color: #fff;
 }
 
-.image-13 {
-	position: absolute;
-	left: 50%;
-	top: 100%;
-	right: 0px;
-	margin-left: -20px;
-}
-
 .section-11 {
 	padding-top: 60px;
 	padding-bottom: 60px;
@@ -667,14 +426,6 @@ body {
 	list-style-type: square;
 }
 
-.list-item-2 {
-	font-size: 16px;
-}
-
-.list-item-3 {
-	font-size: 16px;
-}
-
 .edge-list {
 	text-align: left;
 	list-style-type: square;
@@ -683,12 +434,6 @@ body {
 .form {
 	padding-right: 60px;
 	padding-left: 60px;
-}
-
-.text-block-8 {
-	padding-bottom: 5px;
-	font-size: 20px;
-	text-align: left;
 }
 
 .edge-text {
@@ -711,10 +456,6 @@ body {
 
 .footer-text {
 	padding-bottom: 5px;
-}
-
-.image-14 {
-	padding-bottom: 10px;
 }
 
 .nav-link {
@@ -804,10 +545,6 @@ body {
 	color: #fa4e09;
 }
 
-.image-16 {
-	margin-top: 20px;
-}
-
 .image-17 {
 	margin-top: 8px;
 }
@@ -821,6 +558,7 @@ body {
 .tabgif img, .tabgif video {
 	display: block;
 }
+
 .textblock-12 {
 	font-size: 32px;
 	line-height: 40px;
@@ -835,8 +573,7 @@ body {
 		padding-bottom: 0px;
 		font-size: 50px;
 	}
-	.heading-8 {
-		font-size: 50px;
+
 	}
 	.button-4 {
 		padding: 15px 40px;
@@ -863,16 +600,17 @@ body {
 		font-size: 22px;
 	}
 	.announcement-text {
-		padding-top: 0px;
-		padding-left: 0px;
+		padding-top: 10px;
+		padding-bottom: 10px;
+		padding-left: 20px;
 		float: none;
-		font-size: 20px;
+		font-size: 24px;
 		line-height: 24px;
 		text-align: left;
 	}
 	.announcement-button {
 		display: inline-block;
-		margin-top: 0px;
+		margin-top: 14px;
 		padding-right: 20px;
 		padding-left: 20px;
 		float: none;
@@ -1050,5 +788,40 @@ body {
 		display: block;
 		margin-right: 0px;
 		margin-left: 0px;
+	}
+}
+
+@media (max-width: 320px) {
+	.heading-17 {
+		color: white;
+		font-weight: 400;
+		font-size: 38px;
+		line-height: 44px;
+		margin-top:0px;
+	}
+	.dif_block-heading {
+		margin-top: 20px;
+	}
+	.dif_block {
+		margin-top: 20px;
+		margin-bottom: 0px;
+		padding-top: 0px;
+		padding-right: 20px;
+		padding-left: 20px;
+	}
+	.button-4 {
+		display: block;
+		padding-right: 0px;
+		padding-left: 0px;
+		background-color: #fa4e09;
+		color: #fff;
+		font-size: 18px;
+	}
+	.button-4:active {
+		background-color: #fff;
+		color: #fa4e09;
+	}
+.button-6 {
+	display: block;
 	}
 }
