--- a/public/css/pricing.css
+++ b/public/css/pricing.css
@@ -3,7 +3,7 @@
   padding-top: 10px; 
 }
 
-.checkout-wrap {
+.pricing-wrap {
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -17,25 +17,55 @@
   text-align: center;
 }
 
-.checkout-product {
+.nav-link {
+	border: 4px solid transparent;
+	font-weight: 300;
+  text-decoration: none;
+  transition: .3s;
+}
+
+.nav-link:hover {
+	border-top-color: #035b9b;
+}
+
+.nav-link.teamlink:hover {
+	border-top-color: #16af41;
+}
+
+.nav-link.pod:hover {
+	border-top-color: #ca171e;
+}
+
+.nav-link.blog:hover {
+	border-top-color: #c2c929;
+}
+
+.nav-link.login:hover {
+	border-color: #fff;
+	border-radius: 6px;
+	background-color: #fa4e09;
+	color: #fff;
+}
+
+.pricing-product {
   width: 370px;
   padding-top: 90px;
 }
 
-.checkout-product-m{
+.pricing-product-m{
   width: 370px;
   background: #efefef
 }
-.checkout-hero {
+.pricing-hero {
   text-align: center;
 }
 
-.checkout-header-text-wrap {
+.pricing-header-text-wrap {
   padding-top: 10px;
   padding-bottom: 10px;
 }
 
-.checkout-header-button-wrap {
+.pricing-header-button-wrap {
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -48,7 +78,7 @@
   justify-content: center;
 }
 
-.checkout-head {
+.pricing-head {
   margin-top: 30px;
   margin-bottom: 20px;
   padding-bottom: 0px;
@@ -60,13 +90,14 @@
   font-family: Roboto, sans-serif;
 }
 
-.checkout-hero-call {
+.pricing-hero-call {
   font-size: 18px;
   text-decoration: none;
   text-transform: none;
+  display: none;
 }
 
-.checkout-header-button {
+.pricing-header-button {
   margin-right: 20px;
   margin-left: 20px;
   padding: 10px 20px;
@@ -79,29 +110,29 @@
   transition: all .5s ease;
 }
 
-.checkout-header-button:hover{
+.pricing-header-button:hover{
   background-position: 0 0; 
 }
 
-.checkout-teacher-call {
+.pricing-teacher-call {
   margin-top: auto;
   margin-bottom: auto;
   padding-top: auto;
   padding-bottom: auto;
-  font-size: 18px;
+  font-size: 22px;
 }
 
-.checkout-top {
+.pricing-top {
   height:8px;}
 
-.checkout-productname {
+.pricing-productname {
   border-style: none;
   border-bottom-width: 1px;
   border-bottom-color: #000;
   font-weight: 300;
 }
 
-.checkout-features {
+.pricing-features {
   margin-bottom: 0px;
   margin-left: 30px;
   padding-left: 0px;
@@ -110,7 +141,7 @@
   list-style-type: disc;
 }
 
-.checkout-features-greyed {
+.pricing-features-greyed {
   margin-bottom: 0px;
   margin-left: 30px;
   padding-left: 0px;
@@ -120,7 +151,7 @@
   text-decoration: line-through;
 }
 
-.checkout-product-desc-wrap {
+.pricing-product-desc-wrap {
   margin-top: 0px;
   margin-bottom: 0px;
   border-top: 1px solid rgba(5, 2, 2, 0.2);
@@ -149,7 +180,7 @@
   background-image:-o-linear-gradient(60deg, #e5a900 0%, #f1cd0d 100%);
 }
 
-.checkout-product-desc {
+.pricing-product-desc {
   margin-bottom: 0px;
   padding: 15px 10px;
   color: #6b6767;
@@ -159,7 +190,7 @@
   display: inline-block; 
 }
 
-.checkout-price {
+.pricing-price {
   margin-top: 0px;
   margin-bottom: 0px;
   -webkit-box-flex: 0;
@@ -170,7 +201,7 @@
   font-weight: 700;
 }
 
-.checkout-price-wrap {
+.pricing-price-wrap {
   display: block;
   margin-top: 0px;
   margin-bottom: 0px;
@@ -185,7 +216,7 @@
   align-items: stretch;
 }
 
-.checkout-button {
+.pricing-button {
   color: white; 
   padding: 12px 50px;
   border-radius: 10px; 
@@ -200,15 +231,15 @@
   background-size: 180% 200%;
   transition: all .5s ease;
 }
-.checkout-button-wrap {
+.pricing-button-wrap {
   height: 80px;
 }
 
-.checkout-button:hover{
+.pricing-button:hover{
   background-position: 0 0; 
 }
 
-.checkout-list-item {
+.pricing-list-item {
   margin-top: 10px;
   margin-bottom: 10px;
   padding-top: 0px;
@@ -217,11 +248,11 @@
   transition: all .2s ease-in-out;
 }
 
-.checkout-list-item:hover {
+.pricing-list-item:hover {
   transform: scale(1.05);
 }
 
-.checkout-wrap-mob {
+.pricing-wrap-mob {
   display: none;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
@@ -239,7 +270,7 @@
   text-align: center;
 }
 
-.checkout-mob-icon-wrap {
+.pricing-mob-icon-wrap {
   width: 400px;
   height: 400px;
   text-align: left;
@@ -247,59 +278,59 @@
 
 
 @media (max-width: 1300px) {
-  .checkout-wrap {
+  .pricing-wrap {
     margin-left: 20px;
     margin-right: 20px;
   }
 }
 
 @media (max-width: 1025px) {
-  .checkout-wrap {
+  .pricing-wrap {
     margin-left:10px;
     margin-right: 10px;
   }
-  .checkout-product {
+  .pricing-product {
     width:260px;
   }
-  .checkout-product-m{
+  .pricing-product-m{
     width: 340;
   }
 }
 
 @media (max-width: 991px) {
-  .checkout-header-button-wrap {
+  .pricing-header-button-wrap {
     padding-top: 10px;
     padding-bottom: 10px;
   }
-  .checkout-productname {
+  .pricing-productname {
     font-size: 30px;
   }
-  .checkout-product-desc {
+  .pricing-product-desc {
     font-size: 16px;
   }
-  .checkout-product-m{
+  .pricing-product-m{
     width:320px;
   }
-  .checkout-product{
+  .pricing-product{
     width:260px;
   }
 }
 
 @media (max-width: 768px) {
-  .checkout-wrap {
+  .pricing-wrap {
     display: none;
     margin-top: 20px;
     margin-left: 0px; 
     margin-right; 0px; 
   }
-  .checkout-product {
+  .pricing-product {
     width: 160px;
   }
-  .checkout-header-text-wrap {
+  .pricing-header-text-wrap {
     padding-right: 20px;
     padding-left: 20px;
   }
-  .checkout-header-button-wrap {
+  .pricing-header-button-wrap {
     padding: 10px 20px;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -307,33 +338,33 @@
     -ms-flex-direction: column;
     flex-direction: column;
   }
-  .checkout-head {
+  .pricing-head {
     font-size: 30px;
   }
-  .checkout-hero-call {
+  .pricing-hero-call {
     font-size: 16px;
   }
-  .checkout-header-button {
+  .pricing-header-button {
     font-size: 20px;
   }
-  .checkout-teacher-call {
+  .pricing-teacher-call {
     margin-bottom: 10px;
     font-size: 14px;
   }
-  .checkout-productname {
+  .pricing-productname {
     font-size: 24px;
   }
-  .checkout-product-desc {
+  .pricing-product-desc {
     font-size: 14px;
   }
-  .checkout-price {
+  .pricing-price {
     font-size: 46px;
   }
-  .checkout-price-wrap {
+  .pricing-price-wrap {
     padding-top: 20px;
     padding-bottom: 20px;
   }
-  .checkout-wrap-mob {
+  .pricing-wrap-mob {
     display: inline-block;
     margin-top: 30px;
     margin-bottom: 30px;
@@ -344,21 +375,21 @@
 }
 
 @media (max-width: 479px) {
-  .checkout-header-button-wrap {
+  .pricing-header-button-wrap {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
     -webkit-flex-direction: column;
     -ms-flex-direction: column;
     flex-direction: column;
   }
-  .checkout-head {
+  .pricing-head {
     font-size: 30px;
   }
-  .checkout-hero-call {
+  .pricing-hero-call {
     font-size: 18px;
     line-height: 22px;
   }
-  .checkout-header-button {
+  .pricing-header-button {
     margin-right: -18px;
     margin-left: -18px;
     padding-top: 8px;
